# ull-esp-rs

./: .gitignore  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  README.md
.cargo/: config.toml
boards/esp32-devkit-v1/: Cargo.toml
boards/esp32-devkit-v1/src/: error.rs  lib.rs  uart.rs
boards/esp32-devkit-v1/src/board/: i2c.rs  mod.rs  spi.rs  wifi.rs
crates/ull-esp-board-devkit-v1/: Cargo.toml
crates/ull-esp-board-devkit-v1/src/: board.rs  lib.rs  pins.rs
crates/ull-esp-board-devkit-v1/src/board/: error.rs  i2c.rs  led.rs  mod.rs  spi.rs  uart.rs  wifi.rs
crates/ull-esp-platform/: Cargo.toml
crates/ull-esp-platform/src/: error.rs  flash.rs  i2c.rs  lib.rs  ota.rs  spi.rs  uart.rs  wifi.rs
crates/ull-esp-platform/src/ota/: boot.rs  image.rs  install.rs  mod.rs  shared.rs  slots.rs
crates/ull-esp-support/: Cargo.toml
crates/ull-esp-support/src/: config.rs  runtime.rs
examples/: build_support.rs
examples/blinky/: Cargo.toml  build.rs
examples/blinky/src/: main.rs
examples/http-ota/: .env.example  Cargo.toml  README.md  build.rs  espflash.toml  partitions.csv
examples/http-ota/src/: app.rs  config.rs  error.rs  http.rs  main.rs
examples/sht3x-ssd1306/: .env.example  Cargo.toml  build.rs
examples/sht3x-ssd1306/src/: app.rs  config.rs  error.rs  main.rs  reading.rs  telemetry.rs
examples/sht3x-ssd1306/src/tasks/: display.rs  http.rs  mod.rs  sensor.rs
