[workspace]
resolver = "2"
members = [
    "crates/ull-esp-platform",
    "crates/ull-esp-board-devkit-v1",
    "examples/sht3x-ssd1306",
    "examples/blinky",
    "examples/http-ota"
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ullnorse/ull-esp-rs"
rust-version = "1.88"

[workspace.dependencies]
embassy-embedded-hal = "0.6.0"
embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-net = { version = "0.9.1", default-features = false, features = ["dhcpv4", "medium-ethernet", "proto-ipv4", "tcp", "log"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.0", features = ["log"] }
embedded-graphics = "0.8"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.7.0"
embedded-storage = "0.3.1"
esp-alloc = { version = "0.10.0", features = ["esp32"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }
esp-hal = { version = "1.1.0", features = ["esp32", "unstable", "log-04"] }
esp-println = { version = "0.17.0", features = ["esp32", "log-04", "timestamp"] }
esp-radio = { version = "0.18.0", default-features = false, features = ["esp32", "wifi", "log-04", "unstable", "esp-alloc"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "esp-radio", "esp32", "log-04"] }
esp-storage = { version = "0.9.0", features = ["esp32"] }
heapless = "0.8"
log = "0.4"
picoserve = { version = "0.18.0", default-features = false, features = ["embassy", "log"] }
sha2 = { version = "0.10.9", default-features = false }
static_cell = "2.1.1"
thiserror = { version = "2.0.12", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"

[profile.dev.package.esp-radio]
opt-level = 3
