[package]
name = "ull-esp-board-devkit-v1"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ESP32 DevKit V1 board mapping and helpers for ull-esp-rs"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["esp32", "board", "devkit", "embedded"]

[lib]
path = "src/lib.rs"
test = false
doctest = false
bench = false

[lints]
workspace = true

[dependencies]
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-time.workspace = true
esp-hal.workspace = true
ull-esp-platform = { path = "../ull-esp-platform" }
thiserror.workspace = true
