[package]
name = "ull-esp-platform"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable ESP32 platform mechanics for Embassy-based projects"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["esp32", "embassy", "wifi", "embedded"]

[lib]
path = "src/lib.rs"
test = false
doctest = false
bench = false

[lints]
workspace = true

[dependencies]
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-storage.workspace = true
esp-alloc.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-hal.workspace = true
esp-println.workspace = true
esp-radio.workspace = true
esp-rtos.workspace = true
esp-storage.workspace = true
log.workspace = true
sha2.workspace = true
static_cell.workspace = true
thiserror.workspace = true
