[package]
name = "blinky"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "blinky"
path = "src/main.rs"
test = false
bench = false

[dependencies]
embassy-executor.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-hal.workspace = true
esp-rtos.workspace = true
log.workspace = true
ull-esp-board-devkit-v1 = { path = "../../crates/ull-esp-board-devkit-v1" }
ull-esp-platform = { path = "../../crates/ull-esp-platform" }
