[package]
name = "http-ota"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "http-ota"
path = "src/main.rs"
test = false
bench = false

[dependencies]
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-io-async.workspace = true
esp-bootloader-esp-idf.workspace = true
esp-hal.workspace = true
esp-rtos.workspace = true
heapless.workspace = true
log.workspace = true
static_cell.workspace = true
thiserror.workspace = true
ull-esp-board-devkit-v1 = { path = "../../boards/esp32-devkit-v1" }
ull-esp-platform = { path = "../../crates/ull-esp-platform" }
